--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,9 @@ body {
 }
 .link {
   text-decoration: none;
+  transition: 250ms ease;
 }
+
 .list {
   list-style: none;
 }
@@ -41,6 +43,9 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+.last {
+  margin-right: 0;
+}
 
 /*-----header-------*/
 
@@ -48,17 +53,17 @@ body {
   background: var(--primary-title-color);
   border-bottom: 1px solid var(--third-title-color);
 }
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 }
-.header-nav {
+.header__nav {
   display: flex;
   align-items: center;
 }
-.header-logo {
+.header__logo {
   font-weight: bold;
   font-size: 26px;
   line-height: calc(31 / 26);
@@ -67,18 +72,35 @@ body {
   margin-left: 0px;
   margin-right: 95px;
 }
-.logo {
+.header__list {
+  display: flex;
+  align-items: center;
+}
+.header__item {
+  margin-right: 50px;
+}
+.header__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.02em;
+  color: var(--prymary-text-color);
+  position: relative;
+  transition: 250ms ease;
+}
+.header__link:hover,
+.header__link:focus {
+  color: var(--fourth-text-color);
+}
+.header__spanlogo {
   font-weight: bold;
   font-size: 26px;
   line-height: calc(31 / 26);
   letter-spacing: 0.03em;
   color: var(--prymary-text-color);
 }
-.header-list {
-  display: flex;
-  align-items: center;
-}
-.current::after {
+
+.header__current::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -89,31 +111,12 @@ body {
   bottom: -41px;
 }
 
-.header-list-contacts {
+.header__contacts {
   display: flex;
   margin-left: auto;
   align-items: center;
 }
-.header-item {
-  margin-right: 50px;
-}
-.link {
-  transition: 250ms ease;
-}
-.header-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  letter-spacing: 0.02em;
-  color: var(--prymary-text-color);
-  position: relative;
-  transition: 250ms ease;
-}
-.header-link:hover,
-.header-link:focus {
-  color: var(--fourth-text-color);
-}
-.header-mail-link {
+.header__mail {
   font-weight: 500;
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -121,13 +124,12 @@ body {
   color: var(--second-text-color);
   display: flex;
 }
-.header-mail-link:hover,
-.header-mail-link:focus {
+.header__mail:hover,
+.header__mail:focus {
   color: var(--fourth-text-color);
   fill: var(--fourth-text-color);
 }
-
-.header-tel-link {
+.header__tel {
   font-weight: 500;
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -135,16 +137,12 @@ body {
   color: var(--second-text-color);
   margin-left: 52px;
 }
-.header-mail {
-  margin-right: 30px;
-}
-
-.header-tel-link:hover,
-.header-tel-link:focus {
+.header__tel:hover,
+.header__tel:focus {
   color: var(--fourth-text-color);
   fill: var(--fourth-text-color);
 }
-.svg-header {
+.header__svg {
   margin-right: 10px;
 }
 
@@ -154,9 +152,9 @@ body {
   background: var(--fourth-title-color);
 }
 
-/*--sec1----*/
+/*------hero------*/
 
-.section-one {
+.hero {
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -169,7 +167,7 @@ body {
   padding-top: 200px;
   padding-bottom: 200px;
 }
-.section-one-list {
+.hero__tittle {
   font-family: Roboto;
   font-weight: 900;
   font-size: 44px;
@@ -181,7 +179,7 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-.main-btn {
+.hero__btn {
   background-color: var(--fourth-text-color);
   cursor: pointer;
   font-weight: bold;
@@ -200,80 +198,24 @@ body {
   margin-right: auto;
   transition: 250ms ease;
 }
-.main-btn:hover,
-.main-btn:focus {
+.hero__btn:hover,
+.hero__btn:focus {
   background: #188ce8;
   color: var(--third-text-color);
 }
 
-/*--------sec2--------*/
+/*--------works--------*/
 
-.section-two {
+.works {
   background: var(--primary-title-color);
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.sec-two-title {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--prymary-text-color);
-  margin-bottom: 10px;
-}
-.sec-two-text {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: calc(24 / 14);
-  letter-spacing: 0.03em;
-  color: var(--second-text-color);
-  max-width: 270px;
-  margin-right: 30px;
-}
-.last {
-  margin-right: 0;
-}
-.about-us {
-  margin-top: 94px;
-  margin-left: 0;
-}
-.sec-two-about {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: calc(42 / 36);
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--prymary-text-color);
-  margin-top: 94px;
-  margin-bottom: 50px;
-}
-.sec-two-list {
+.works__list {
   display: flex;
   align-items: center;
 }
-.img-sec-two {
-  position: relative;
-  margin-right: 30px;
-}
-.apps {
-  width: 370px;
-  height: 70px;
-  background: #2f303acc;
-  position: absolute;
-  bottom: 0px;
-}
-.words {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-align: center;
-  color: #ffffff;
-  margin-top: 27px;
-}
-.icon-about {
+.works__icon {
   width: 270px;
   height: 120px;
   background: var(--fourth-title-color);
@@ -283,13 +225,62 @@ body {
   padding-bottom: 25px;
   padding-top: 25px;
 }
-.svg-sec2 {
+.icon__svg {
   width: 70px;
   height: 70px;
   background: var(--fourth-title-color);
   margin-bottom: 30px;
   background-repeat: no-repeat;
   background-position: center;
+}
+.icon__tittle {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--prymary-text-color);
+  margin-bottom: 10px;
+}
+.icon__text {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
+  max-width: 270px;
+  margin-right: 30px;
+}
+.works__tittle {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--prymary-text-color);
+  margin-top: 94px;
+  margin-bottom: 50px;
+}
+.works__image {
+  position: relative;
+  margin-right: 30px;
+}
+.image__div {
+  width: 370px;
+  height: 70px;
+  background: #2f303acc;
+  position: absolute;
+  bottom: 0px;
+}
+.image__tittle {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: #ffffff;
+  margin-top: 27px;
 }
 
 /*----sec3--------*/
